Update  116.2, update HACS components, Add Media_dirs,

--- a/integrations/homeassistant.yaml
+++ b/integrations/homeassistant.yaml
@@ -7,3 +7,6 @@
   homeassistant:
     # Lets me customize individual entities
     customize: !include_dir_merge_named ../customizations/entities
+    # Alternative directories to expose media
+    media_dirs:
+      recording: /share/motioneye
