--- a/integrations/http.yaml
+++ b/integrations/http.yaml
@@ -6,7 +6,7 @@
   #
   http:
     # Enables additional IP filtering.
-    ip_ban_enabled: true
+    ip_ban_enabled: false
   
     # Number of failed login attempts from a single IP after which it will
     # be automatically banned.
