--- a/node-red/.config.nodes.json
+++ b/node-red/.config.nodes.json
@@ -1,7 +1,7 @@
 {
     "node-red": {
         "name": "node-red",
-        "version": "1.2.3",
+        "version": "1.2.5",
         "local": false,
         "nodes": {
             "inject": {
@@ -430,7 +430,7 @@
     },
     "node-red-contrib-home-assistant-websocket": {
         "name": "node-red-contrib-home-assistant-websocket",
-        "version": "0.27.4",
+        "version": "0.27.5",
         "local": false,
         "nodes": {
             "server": {
@@ -614,7 +614,7 @@
     },
     "node-red-contrib-influxdb": {
         "name": "node-red-contrib-influxdb",
-        "version": "0.5.0",
+        "version": "0.5.1",
         "local": false,
         "nodes": {
             "influxdb": {
@@ -903,7 +903,7 @@
     },
     "node-red-node-ping": {
         "name": "node-red-node-ping",
-        "version": "0.2.1",
+        "version": "0.2.2",
         "local": false,
         "nodes": {
             "ping": {
@@ -988,7 +988,7 @@
     },
     "node-red-node-twitter": {
         "name": "node-red-node-twitter",
-        "version": "1.1.6",
+        "version": "1.1.7",
         "local": false,
         "nodes": {
             "twitter": {
@@ -1007,7 +1007,7 @@
     },
     "node-red-contrib-cast": {
         "name": "node-red-contrib-cast",
-        "version": "0.2.15",
+        "version": "0.2.16",
         "local": false,
         "nodes": {
             "cast-to-client": {
@@ -1181,7 +1181,7 @@
     },
     "node-red-dashboard": {
         "name": "node-red-dashboard",
-        "version": "2.23.5",
+        "version": "2.24.0",
         "local": false,
         "nodes": {
             "ui_base": {
@@ -1398,7 +1398,7 @@
     },
     "node-red-node-pi-gpio": {
         "name": "node-red-node-pi-gpio",
-        "version": "1.2.0",
+        "version": "1.2.1",
         "local": false,
         "nodes": {
             "rpi-gpio": {
@@ -1453,7 +1453,7 @@
     "node-red-contrib-opcua": {
         "name": "node-red-contrib-opcua",
         "version": "0.2.89",
-        "local": false,
+        "local": true,
         "nodes": {
             "OpcUa-Item": {
                 "name": "OpcUa-Item",
@@ -1530,7 +1530,7 @@
     "node-red-contrib-meta": {
         "name": "node-red-contrib-meta",
         "version": "2.0.1",
-        "local": false,
+        "local": true,
         "nodes": {
             "meta": {
                 "name": "meta",
