--- a/automations.yaml
+++ b/automations.yaml
@@ -242,7 +242,7 @@
   alias: Open Covers non workday
   trigger:
   - platform: template
-    value_template: '{{ states(''input_datetime.coveropenweekday_time'').rsplit('':'',1)[0]
+    value_template: '{{ states(''input_datetime.coveropenworkday_time'').rsplit('':'',1)[0]
       == states(''sensor.time'') }}
 
       '
@@ -273,6 +273,7 @@
       entity_id: cover.qubino_boven_voor_groot_level
       position: 100
     service: cover.set_cover_position
+  mode: single
 - id: '17'
   alias: Open Covers during weekend
   trigger:
